--- a/Changes
+++ b/Changes
@@ -1,3 +1,15 @@
+0.02  Fri Feb 15 2013
+# Updated entirely to be a bit more Perlish. 
+- lib/CSS/Flip.pod
++ lib/CSS/Janus/Consts.pm
+  - Separate package for solely internal constants.
+! lib/CSS/Janus.pm
+  - Removed "~J~" tokenization.
+  - Added "~X...~" tokenization.
+! t/18bisBGPositionLength.t
+  - Added tests.
++ ToDo
+
 0.01  Wed Feb 13 2013
 # Initial chkckin
 
