Import of NEZUMI/CSS-Flip-0.04 from CPAN.
gitpan-cpan-distribution: CSS-Flip
gitpan-cpan-version:      0.04
gitpan-cpan-path:         NEZUMI/CSS-Flip-0.04.tar.gz
gitpan-cpan-author:       NEZUMI
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -7,9 +7,13 @@ under the same terms as Perl itself.
 
                                    ***
 
-One main module and one utility program file are contained. For more details
-read following POD documentation:
+One main module is contained.  For more details read following POD
+documentation:
 
     CSS::Janus - Converts a left-to-right Cascading Style Sheet (CSS) into a right-to-left one
+
+For more details about the utility program cssflip, run:
+
+    cssflip --help
 
 $$
