Import of NEZUMI/CSS-Flip-0.04_03 from CPAN.
gitpan-cpan-distribution: CSS-Flip
gitpan-cpan-version:      0.04_03
gitpan-cpan-path:         NEZUMI/CSS-Flip-0.04_03.tar.gz
gitpan-cpan-author:       NEZUMI
gitpan-cpan-maturity:     developer

--- a/README
+++ b/README
@@ -7,10 +7,11 @@ under the same terms as Perl itself.
 
                                    ***
 
-One main module is contained.  For more details read following POD
-documentation:
+Two main modules and several submodules are contained.  For more details
+read following POD documentation:
 
     CSS::Janus - Converts a left-to-right Cascading Style Sheet (CSS) into a right-to-left one
+    CSS::Yamaantaka - Converts direction of Cascading Style Sheet (CSS)
 
 For more details about the utility program cssflip, run:
 
